--- a/src/config.json
+++ b/src/config.json
@@ -68,7 +68,7 @@
       "menuLink": "/shop",
       "category": [
         {
-          "categoryLabel": "woman",
+          "categoryLabel": "woman1",
           "submenu": [
             {
               "menuLabel": "All clothing",
